# python-neo

./: .gitignore  .pep8speaks.yml  .readthedocs.yaml  .travis.yml  AUTHORS  CITATION.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  TODO.txt  __init__.py  codemeta.json  environment_testing.yml  pyproject.toml  read_axona_bin_cont.ipynb  requirements.txt  requirements_testing.txt  setup.py  test_neo.py  tox.ini  utils.py
.circleci/: config.yml  requirements_testing.txt
.github/ISSUE_TEMPLATE/: bug_report.md  confusing-documentation.md  feature_request.md
.github/workflows/: black-formatting.yml  caches_cron_job.yml  copy-neuropixels-probe-features.yml  core-test.yml  ebrains.yml  full-test.yml  io-test.yml  io-test_dispatch.yml  io-test_trigger.yml  plexon2-testing.yml  publish-to-pypi-test.yml  publish-to-pypi.yml  ruff.yml
core/: analogsignal.py  epoch.py  spiketrain.py
doc/: Makefile  example_data_about.json  make.bat  requirements_docs.txt
doc/old_stuffs/: core.rst  developers_guide.rst  examples.rst  gif2011workshop.rst  grouping.rst  index.rst  install.rst  io.rst  io_developers_guide.rst  rawio.rst  usecases.rst
doc/source/: add_file_format.rst  api_reference.rst  authors.rst  bug_reports.rst  classes.rst  conf.py  contributing.rst  core.rst  developers_guide.rst  example_data.txt  examples.rst  gif2011workshop.rst  governance.rst  grouping.rst  index.rst  install.rst  io.rst  io_developers_guide.rst  iolist.rst  neo_users.rst  rawio.rst  rawiolist.rst  read_and_analyze.rst  releases.rst  share_data.rst  specific_annotations.rst  use_neo_as_dependency.rst  usecases.rst  whatisnew.rst
doc/source/_templates/: index.html
doc/source/images/: IODiagram.eps  generate_diagram.py  generate_io_overview.py  neo_UML_French_workshop.dia  neo_ecosystem.drawio
doc/source/releases/: 0.10.0.rst  0.10.1.rst  0.10.2.rst  0.11.0.rst  0.11.1.rst  0.12.0.rst  0.13.0.rst  0.13.1.rst  0.13.2.rst  0.13.3.rst  0.13.4.rst  0.14.0.rst  0.14.1.rst  0.14.2.rst  0.14.3.rst  0.14.4.rst  0.14.5.rst  0.4.0.rst  0.5.0.rst  0.5.1.rst  0.5.2.rst  0.6.0.rst  0.7.0.rst  0.7.1.rst  0.7.2.rst  0.8.0.rst  0.9.0.rst
doc/source/scripts/: multi_tetrode_example.py  spike_sorting_example.py
drafts/sam test/: test_objects.py
examples/: NWB-Allen-Institute-Example.ipynb  README.rst  README.txt  convert_to_nwb.py  generated_data.py  igorio.ipynb  igorio.py  imageseq.py  plot_igorio.py  plot_imageseq.py  plot_multi_tetrode_example.py  plot_read_files_neo_io.py  plot_read_files_neo_rawio.py  plot_read_proxy_with_lazy_load.py  plot_roi_demo.py  plot_with_matplotlib.py  read_files.py  read_files_neo_io.py  read_files_neo_rawio.py  read_files_tdt.py  read_proxy_with_lazy_load.py  roi_demo.py  simple_plot_with_matplotlib.py
examples/NeuroConvert/: NeuroConvert.py  paramwidget.py
examples/NeuroConvert/icons/: icons.py  icons.qrc  make_ressources.py
neo/: __init__.py  converter.py  description.py  units.py  utils.py  version.py
neo.recipe/: meta.yaml
neo/core/: __init__.py  analogsignal.py  analogsignalarray.py  analogsignallist.py  baseneo.py  basesignal.py  block.py  channelindex.py  container.py  dataobject.py  epoch.py  epocharray.py  event.py  event_BACKUP_4347.py  event_BASE_4347.py  event_LOCAL_4347.py  eventarray.py  filters.py  group.py  imagesequence.py  irregularlysampledsignal.py  irregularysampledsignal.py  neuron.py  objectlist.py  pairgenerator.py  quantifiedanalogsignal.py  recordchannel.py  recordingchannel.py  recordingchannelgroup.py  recordingpoint.py  regionofinterest.py  segment.py  spike.py  spiketrain.py  spiketrainlist.py  unit.py  view.py
neo/io/: OpenEphys.py  __init__.py  alphaio.py  alphaomegaio.py  analogblackrockio.py  asciiimageio.py  asciiio.py  asciisignalio.py  asciispikeio.py  asciispiketrainio.py  axographio.py  axonaio.py  axonio.py  basefromrawio.py  baseio.py  bci2000io.py  biocamio.py  blackrockio.py  blackrockio_deprecated.py  blackrockio_v4.py  blkio.py  brainvisionio.py  brainwaredamio.py  brainwaref32io.py  brainwaresrcio.py  cedio.py  csvio.py  datafile.py  edfio.py  eeglabio.py  elanio.py  elphydatio.py  elphyio.py  exampleio.py  exdirio.py  hdf5io.py  hdf5io_new.py  hekaio.py  igorproio.py  intanbinaryio.py  (+56 more)
neo/io/basefromrawio/: __init__.py  base.py  proxyobjects.py
neo/io/neuroshare/: neuroshareio.py
neo/rawio/: __init__.py  alphaomegarawio.py  axographrawio.py  axonarawio.py  axonrawio.py  baserawio.py  bci2000rawio.py  biocamrawio.py  blackrockrawio.py  brainvisionrawio.py  cedrawio.py  edfrawio.py  elanrawio.py  examplerawio.py  intanbinaryrawio.py  intanrawio.py  maxwellrawio.py  mearecrawio.py  medrawio.py  micromedrawio.py  monkeylogicrawio.py  nest3rawio.py  neuralynxrawio.py  neuroexplorerrawio.py  neuronexusrawio.py  neuroscoperawio.py  nicoletrawio.py  nixrawio.py  nwbrawio.py  oldopenephysrawio.py  openephysbinaryrawio.py  openephysrawio.py  phyrawio.py  plexonrawio.py  rawbinarysignalrawio.py  rawmcsrawio.py  read_blk.py  read_tif.py  read_txt.py  spike2rawio.py  (+10 more)
neo/resources/: neuropixels_probe_features.json
neo/test/: README.txt  __init__.py  create_example_hdf5io.py  generate_datasets.py  test_analogsignal.py  test_analogsignalarray.py  test_base.py  test_block.py  test_converter.py  test_epoch.py  test_epocharray.py  test_event.py  test_eventarray.py  test_irregularysampledsignal.py  test_recordingchannel.py  test_recordingchannelgroup.py  test_segment.py  test_spike.py  test_spiketrain.py  test_unit.py  test_utils.py  testfile_partialwrite.h5  testfile_readtest.h5  tools.py
neo/units/: __init__.py
neo/utils/: __init__.py  datasets.py  misc.py
neoquantified/: __init__.py
neoquantified/core/: analogsignal.py  baseneo.py  event.py  pairgenerator.py  recordingpoint.py  segment.py  spiketrain.py  spiketrainlist.py
neoquantified/io/: baseio.py  brainvisionio.py  elanio.py  elphydatio.py  exampleio.py  plexonio.py  pynnio.py
quantities.recipe/: meta.yaml
test/io_file_examples/: Burst Data as Events.smr  Cricket Song.smr  Extracellular Spikes.smr
(+296 files in other folders)
