[project]
name = "neo"
version = "0.13.0.dev0"
authors = [{name = "Neo authors and contributors"}]
description = "Neo is a package for representing electrophysiology data in Python, together with support for reading a wide range of neurophysiology file formats"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "packaging",
    "numpy>=1.19.5",
    "quantities>=0.14.1"
]

[project.urls]
homepage = "https://neuralensemble.org/neo"
documentation = "http://neo.readthedocs.io/"
repository = "https://github.com/NeuralEnsemble/python-neo"
download = "http://pypi.python.org/pypi/neo"


[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]

iocache = [
    "joblib>=1.0.0"
]

test = [
    "dhn_med_py>=1.0.0",
    "pytest",
    "pytest-cov",
    # datalad   # this dependency is covered by conda (environment_testing.yml)
    "scipy>=1.0.0",
    "pyedflib",
    "h5py",
    "igor2",
    "klusta",
    "tqdm",
    "nixio",
    "matplotlib",
    "ipython",
    "joblib>=1.0.0",
    "coverage",
    "coveralls",
    "pillow",
    "sonpy",
    "pynwb",
    "probeinterface",
    "zugbruecke>=0.2",
    "wenv"
]

docs = [
    "docutils<0.18",
    "sphinx-inline-tabs",
    "sphinx-gallery",
    "pydata-sphinx-theme",
    "sphinx-design",
    "ipython",
    "matplotlib",
    "nixio",
    "pynwb"
]

dev = [
    "build",
    "twine"
]

igorproio = ["igor2"]
kwikio = ["klusta"]
neomatlabio = ["scipy>=1.0.0"]
nixio = ["nixio>=1.5.0"]
stimfitio = ["stfio"]
tiffio = ["pillow"]
edf = ["pyedflib"]
ced = ["sonpy"]
nwb = ["pynwb"]
maxwell = ["h5py"]
biocam = ["h5py"]
med = ["dhn_med_py>=1.0.0"]
plexon2 = ["zugbruecke>=0.2; sys_platform!='win32'", "wenv; sys_platform!='win32'"]

all = [
    "coverage",
    "coveralls",
    "dhn_med_py>=1.0.0",
    "h5py",
    "igor2",
    "ipython",
    "joblib>=1.0.0",
    "klusta",
    "matplotlib",
    "nixio>=1.5.0",
    "pillow",
    "probeinterface",
    "pyedflib",
    "pynwb",
    "pytest",
    "pytest-cov",
    "scipy>=1.0.0",
    "sonpy",
    "tqdm",
    "wenv; sys_platform!='win32'",
    "zugbruecke>=0.2; sys_platform!='win32'",
]
# we do not include 'stfio' in 'all' as it is not pip installable
