[project]
name = "neo"
version = "0.14.1"
authors = [{name = "Neo authors and contributors"}]
description = "Neo is a package for representing electrophysiology data in Python, together with support for reading a wide range of neurophysiology file formats"
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "packaging",
    "numpy>=1.24.4",
    "quantities>=0.16.1"
]

[project.urls]
homepage = "https://neuralensemble.org/neo"
documentation = "http://neo.readthedocs.io/"
repository = "https://github.com/NeuralEnsemble/python-neo"
download = "http://pypi.python.org/pypi/neo"


[build-system]
requires = ["setuptools>=78.0.2"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]

iocache = [
    "joblib>=1.0.0"
]

test = [
    # "dhn_med_py<2.0", # ci failing with 2.0 test future version when stable
    "pytest",
    "pytest-cov",
    "datalad",
    "scipy>=1.0.0",
    "pyedflib",
    "h5py",
    "igor2",
    "klusta",
    "tqdm",
    "nixio",
    "matplotlib",
    "ipython",
    "joblib>=1.0.0",
    "coverage",
    "coveralls",
    "pillow",
    "sonpy;python_version<'3.10'",
    "pynwb",
    "probeinterface",
    "zugbruecke>=0.2",
    "wenv"
]

docs = [
    "docutils",
    "sphinx",
    "sphinx-inline-tabs",
    "sphinx-gallery",
    "pydata-sphinx-theme",
    "sphinx-design",
    "ipython",
    "matplotlib",
    "nixio",
    "pynwb",
    "igor2",
    "numpy>=2.0"
]

dev = [
    "build",
    "twine",
    "black"
]

igorproio = ["igor2"]
kwikio = ["klusta"]
neomatlabio = ["scipy>=1.0.0"]
nixio = ["nixio>=1.5.0"]
tiffio = ["pillow"]
edf = ["pyedflib"]
ced = ["sonpy"]
nwb = ["pynwb"]
maxwell = ["h5py"]
biocam = ["h5py"]
med = ["dhn_med_py<2.0"] # ci failing with 2.0 test future version when stable
plexon2 = ["zugbruecke>=0.2; sys_platform!='win32'", "wenv; sys_platform!='win32'"]

all = [
    "coverage",
    "coveralls",
    # "dhn_med_py<2.0", # ci failing with 2.0 test future version when stable
    "h5py",
    "igor2",
    "ipython",
    "joblib>=1.0.0",
    "klusta",
    "matplotlib",
    "nixio>=1.5.0",
    "pillow",
    "probeinterface",
    "pyedflib",
    "pynwb",
    "pytest",
    "pytest-cov",
    "scipy>=1.0.0",
    "sonpy",
    "tqdm",
    "wenv; sys_platform!='win32'",
    "zugbruecke>=0.2; sys_platform!='win32'",
]
# we do not include 'stfio' in 'all' as it is not pip installable


[tool.black]
line-length = 120
